[gd_scene load_steps=11 format=3 uid="uid://dq7owrkb3o5r3"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_vtlj2"]
[ext_resource type="Texture2D" uid="uid://b77jxnkryx2aa" path="res://Free Assets/PNG/Upgrade/Window.png" id="2_5f2pm"]
[ext_resource type="FontFile" uid="uid://cx5us2v12cc34" path="res://Font Files/Title Font.ttf" id="3_un3rm"]
[ext_resource type="PackedScene" uid="uid://c14ymhav7xwq4" path="res://Scenes/settings_menu.tscn" id="4_q2hrd"]
[ext_resource type="AudioStream" uid="uid://c0iv4alpbig0r" path="res://Sound Files/ButtonClick.wav" id="5_rjmay"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4xrc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aus63"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nfwmn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sg0kb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qfu83"]

[node name="Pause Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtlj2")

[node name="PauseSprite" type="Sprite2D" parent="."]
position = Vector2(960, 536.469)
scale = Vector2(0.66516, 0.75933)
texture = ExtResource("2_5f2pm")

[node name="PauseBG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 666.0
offset_top = 120.0
offset_right = 1254.0
offset_bottom = 1046.0
color = Color(0.0666667, 0.0980392, 0.235294, 0)

[node name="PauseMargin" type="MarginContainer" parent="PauseBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -130.0
offset_right = 115.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PauseVbox" type="VBoxContainer" parent="PauseBG/PauseMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="PauseBG/PauseMargin/PauseVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("3_un3rm")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4xrc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aus63")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nfwmn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sg0kb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qfu83")
text = "Resume"

[node name="SaveButton" type="Button" parent="PauseBG/PauseMargin/PauseVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("3_un3rm")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4xrc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aus63")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nfwmn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sg0kb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qfu83")
text = "Save"

[node name="SettingsButton" type="Button" parent="PauseBG/PauseMargin/PauseVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("3_un3rm")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4xrc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aus63")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nfwmn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sg0kb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qfu83")
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseBG/PauseMargin/PauseVbox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_hover_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_colors/font_pressed_color = Color(0.235294, 0.47451, 0.678431, 1)
theme_override_fonts/font = ExtResource("3_un3rm")
theme_override_font_sizes/font_size = 70
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4xrc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_aus63")
theme_override_styles/hover = SubResource("StyleBoxEmpty_nfwmn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sg0kb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qfu83")
text = "Quit"

[node name="SettingsMenu" parent="." instance=ExtResource("4_q2hrd")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 202.0

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_rjmay")
volume_db = -5.0
bus = &"SFX"

[connection signal="pressed" from="PauseBG/PauseMargin/PauseVbox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseBG/PauseMargin/PauseVbox/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PauseBG/PauseMargin/PauseVbox/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseBG/PauseMargin/PauseVbox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="exit_settings" from="SettingsMenu" to="." method="_on_settings_menu_exit_settings"]
